--- a/dvc.yaml
+++ b/dvc.yaml
@@ -19,3 +19,10 @@ stages:
     - src/model_building.py
     outs:
     - model.pkl
+  model_evaluation:
+    cmd: python src/model_evaluation.py
+    deps:
+    - model.pkl
+    - src/model_evaluation.py
+    metrics:
+    - metrics.json
