--- a/dvc.yaml
+++ b/dvc.yaml
@@ -32,3 +32,8 @@ stages:
     - src/model_evaluation.py
     metrics:
     - metrics.json
+metrics:
+- dvclive/metrics.json
+plots:
+- dvclive/plots/metrics:
+    x: step
